# bitcoin

./: configure.ac
src/: Makefile.am  bitcoind.cpp  chainparams.cpp  miner.cpp  validation.cpp  validation.h
src/consensus/: params.h
src/dag/cclient/serialization/json/: json_serializer.c
src/dag/ciri/: conf.h  core.h  exec.c
src/dag/ciri/api/: api.h
src/dag/common/kerl/: kerl.h
src/dag/consensus/: conf.c  conf.h  consensus.c
src/dag/consensus/snapshot/: snapshot.c
src/dag/dag_params/: MANIFEST
src/dag/gossip/: conf.h
src/dag/network/: concurrent_list_neighbor.c
src/dag/utils/containers/hash/: hash243_queue.c  hash243_queue.h  hash243_set.c  hash243_set.h  hash243_stack.c  hash243_stack.h  hash8019_queue.c  hash8019_queue.h  hash8019_stack.c  hash8019_stack.h  hash81_queue.c  hash81_queue.h
src/rpc/: mining.cpp
